--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=postgresql
 
+logging.level.root=INFO
+
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 
