--- a/book-service/pom.xml
+++ b/book-service/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>liquibase-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
