--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -14,4 +14,7 @@ logging.level.root=INFO
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 
-
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=bookTrackerTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
