--- a/library-service/pom.xml
+++ b/library-service/pom.xml
@@ -63,6 +63,12 @@
             <version>2.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
