--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database=postgresql
+
+logging.level.root=INFO
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=bookTrackerTopic
+spring.kafka.consumer.group-id=bookTrackerId
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.LongDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
