--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -15,6 +15,7 @@
     <description>api-gateway</description>
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>4.1.0</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -26,6 +27,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>${spring-cloud.version}</version>
         </dependency>
     </dependencies>
 
