--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=9090
 
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=book-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8080
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/books/**
+
+spring.cloud.gateway.routes[1].id=library-service
+spring.cloud.gateway.routes[1].uri=http://localhost:7070
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/book-trackers/**
