--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>${spring-cloud.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring-cloud.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
