--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,12 +1,26 @@
-server.port=9090
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=api-gateway
+
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=book-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8080
+spring.cloud.gateway.routes[0].uri=http://book-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/books/**
 
 spring.cloud.gateway.routes[1].id=library-service
-spring.cloud.gateway.routes[1].uri=http://localhost:7070
+spring.cloud.gateway.routes[1].uri=http://library-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/book-trackers/**
+
+spring.cloud.gateway.routes[2].id=discovery-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[2].filters[0]=SetPath=/
+
+spring.cloud.gateway.routes[3].id=discovery-service-static
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
