--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=6060
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=root
@@ -13,8 +15,10 @@ logging.level.root=INFO
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
-
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=bookTrackerTopic
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=book-service
