--- a/library-service/pom.xml
+++ b/library-service/pom.xml
@@ -21,6 +21,7 @@
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <springdoc.version>2.0.4</springdoc.version>
         <spring-kafka.version>3.1.1</spring-kafka.version>
+        <spring-cloud.version>4.1.0</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -73,6 +74,12 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>${spring-kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring-cloud.version}</version>
         </dependency>
 
     </dependencies>
