--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.kafka.template.default-topic=bookTrackerTopic
 spring.kafka.consumer.group-id=bookTrackerId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.LongDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=library-service
