--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 spring.cloud.gateway.routes[3].id=discovery-service-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+
+spring.cloud.gateway.routes[4].id=auth-service
+spring.cloud.gateway.routes[4].uri=http://auth-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/auth/**
