--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=postgresql
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=auth-service
