--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
 
@@ -9,11 +11,11 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=book-service
-spring.cloud.gateway.routes[0].uri=http://book-service
+spring.cloud.gateway.routes[0].uri=lb://book-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/books/**
 
 spring.cloud.gateway.routes[1].id=library-service
-spring.cloud.gateway.routes[1].uri=http://library-service
+spring.cloud.gateway.routes[1].uri=lb://library-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/book-trackers/**
 
 spring.cloud.gateway.routes[2].id=discovery-service
@@ -25,6 +27,4 @@ spring.cloud.gateway.routes[3].id=discovery-service-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
-spring.cloud.gateway.routes[4].id=auth-service
-spring.cloud.gateway.routes[4].uri=http://auth-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/auth/**
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/library-api-realm
