--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-# Postgresql
+  # Postgresql
   db-postgres:
     container_name: db_postgres
     image: postgres
@@ -34,3 +34,18 @@ services:
       POSTGRES_PASSWORD: root
     ports:
       - "5432:5432"
+
+  # Keycloak
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.0
+    container_name: keycloak
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    volumes:
+      - ./realms:/opt/keycloak/data/import
+    ports:
+      - "8181:8080"
+    command:
+      - start-dev
+      - --import-realm
