--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 spring.application.name=api-gateway
 
 logging.level.root=INFO
@@ -18,12 +20,12 @@ spring.cloud.gateway.routes[1].id=library-service
 spring.cloud.gateway.routes[1].uri=lb://library-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/book-trackers/**
 
-spring.cloud.gateway.routes[2].id=discovery-service
+spring.cloud.gateway.routes[2].id=discovery-server
 spring.cloud.gateway.routes[2].uri=http://localhost:8761
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
-spring.cloud.gateway.routes[3].id=discovery-service-static
+spring.cloud.gateway.routes[3].id=discovery-server-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
